added put, delete, validation and error handling
