# controllers/foods.js
@@ -1,45 +1,71 @@
+const Joi = require('joi');
 const mongodb = require( '../db/connect' );
 const ObjectId = require( 'mongodb' ).ObjectId;
+const ApiError = require('../errors/ApiError');
 
 /*******************************
 * GET
 *******************************/
-const getFoods = async ( req, res ) => {
+const getFoods = async ( req, res, next) => {
     /*
     #swagger.description = 'Return all foods'
     */
 
-    console.log( "Debug: getAll" );
+    console.log( "Debug: getFoods" );
 
-    const result = await mongodb.getDb().db().collection( 'foods' ).find();
-    console.log( result );
-    result.toArray().then(( lists ) => {
+    await mongodb.getDb().db().collection( 'foods' ).find().toArray()
+    .then ( result => {
+        // throw new Error("Intentional error");
+        console.log( result );
         res.setHeader( 'Content-Type', 'application/json' );
-        res.status( 200 ).json( lists) ;
+        res.status( 200 ).json( result);
+        next();
+    })
+    .catch( err => {
+        // handle db related errors
+        console.log( err );
+        // res.status( 500 ).json( e || 'An error occurred while getting food' );
+        next( ApiError.badRequest( "An error occurred while getting foods" ));
     });
 };
 
 /*******************************
 * GET
 *******************************/
-const getFood = async ( req, res ) => {
+const getFood = async ( req, res, next ) => {
     /*
     #swagger.description = 'Return the food with matching id'
     */
 
-    console.log( "Debug: getSingle" );
-    const userId = new ObjectId(req.params.id);
-    const result = await mongodb.getDb().db().collection( 'foods' ).find({ _id: userId });
-    result.toArray().then(( lists ) => {
-        res.setHeader( 'Content-Type', 'application/json' );
-        res.status( 200 ).json( lists[0] );
-    });
+    console.log( "Debug: getFood" );
+
+    // use try/catch for synchronous request
+    try {
+        const objectId = new ObjectId( req.params.id ); // throws error on invalid
+        
+        await mongodb.getDb().db().collection( 'foods' ).find({ _id: objectId }).toArray()
+        .then ( result => {
+            // throw new Error("Intentional error");
+            console.log( result );            
+            res.setHeader( 'Content-Type', 'application/json' );
+            res.status( 200 ).json( result[0] );
+            next();
+        })
+        .catch (err => {
+            // handle db related errors
+            console.log( err );
+            next( ApiError.internalServerError( 'An error occurred while getting the food' ));
+        });
+    }
+    catch ( err ) {
+        next ( ApiError.badRequest( "Error: invalid id" ));
+    }
 };
 
 /*******************************
 * POST
 *******************************/
-const createFood = async ( req, res ) => {
+const createFood = async ( req, res, next ) => {
     /*
     #swagger.description = 'Create a new food'
     */
@@ -47,16 +73,64 @@ const createFood = async ( req, res ) => {
     console.log( "Debug: createFood" );
     console.log( req.body ); // made possible thanks to body-parser
 
-    // make sure values exist
-    if (req.body.name.length > 0 &&
-        req.body.category.length > 0 &&
-        req.body.weight.length > 0 &&
-        req.body.measure.length > 0 &&
-        req.body.calories.length > 0 &&
-        req.body.energy.length > 0 &&
-        req.body.foodGroup.length > 0
-        ) {
-        const food = {
+    // object destructoring ... get the property of the object that gets returned
+    const { error } = validateFood( req.body );
+
+    if ( error ) {
+        next( ApiError.badRequest( 'Invalid food data: ' + error.details[0].message ));
+        return;
+    }
+    const food = {
+        name: req.body.name,
+        category: req.body.category,
+        weight: req.body.weight,
+        measure: req.body.measure,
+        calories: req.body.calories,
+        energy: req.body.energy,
+        foodGroup: req.body.foodGroup
+    };
+
+    console.log( "New data: ", food );
+
+    await mongodb.getDb().db().collection( 'foods' ).insertOne( food )
+    .then ( result => {
+        if ( result.acknowledged ) {
+            res.setHeader( 'Content-Type', 'application/json' );
+            res.status( 201 ).json( result );
+            next();
+        }
+        else {
+            next( ApiError.internalServerError( 'An error occurred after creating the food' ));
+        }
+    })
+    .catch ( err => {
+        console.log( err );
+        next( ApiError.internalServerError( 'An error occurred while creating the food' ));
+    });
+};
+
+/*******************************
+* PUT
+*******************************/
+const updateFood = async ( req, res, next ) => {
+    /*
+    #swagger.description = 'Update food'
+    */
+
+    console.log( "Debug: updateFood" );
+    
+    try {
+        const objectId = new ObjectId( req.params.id );
+
+        // object destructoring ... get the property of the object that gets returned
+        const { error } = validateFood( req.body );
+
+        if ( error ) {
+            next( ApiError.badRequest( 'Invalid food data: ' + error.details[0].message ));
+            return;
+        }
+
+        const food = { $set: {
             name: req.body.name,
             category: req.body.category,
             weight: req.body.weight,
@@ -64,28 +138,83 @@ const createFood = async ( req, res ) => {
             calories: req.body.calories,
             energy: req.body.energy,
             foodGroup: req.body.foodGroup
-        };
+        }};
 
-        console.log( food );
-
-        try {
-            const response = await mongodb.getDb().db().collection( 'foods' ).insertOne( food );
-            if ( response.acknowledged ) {
+        // use then/catch for asynchronous code
+        await mongodb.getDb().db().collection( 'foods' ).updateOne( { _id: objectId }, food )
+        .then ( result => {
+            if ( result.acknowledged ) {
                 res.setHeader( 'Content-Type', 'application/json' );
-                res.status( 201 ).json( response );
+                res.status( 201 ).json( result );
+                next();
             }
             else {
-                res.status( 500 ).json( response.error || 'Some error occurred while creating the document.' );
+                next( ApiError.internalServerError( 'An error occurred after updating the food' ));
             }
-        }
-        catch ( err ) {
+        })
+        .catch ( err => {
             console.log( err );
-            res.status( 500 ).json( response.error || 'Some error occurred while creating the document.' );
-        }
+            next( ApiError.internalServerError( 'An error occurred while updating the food' ));
+        });
     }
-    else {
-        res.status( 500 ).json( "error: missing data" );
-    }
+    catch ( err ) {
+        console.log( err );
+        next ( ApiError.badRequest( "Error: invalid id" ));
+    }    
 };
 
-module.exports = { getFoods, getFood, createFood };
+/*******************************
+* DELETE
+*******************************/
+const deleteFood = async ( req, res, next ) => {
+    /*
+    #swagger.description = 'Delete food'
+    */
+
+    console.log( "Debug: deleteFood" );
+
+    try {
+        const objectId = new ObjectId( req.params.id );
+
+        // use then/catch for asynchronous code
+        await mongodb.getDb().db().collection( 'foods' ).deleteOne({ _id: objectId })
+        .then ( result => {
+            if ( result.acknowledged ) {
+                res.setHeader( 'Content-Type', 'application/json' );
+                res.status( 201 ).json( result );
+                next();
+            }
+            else {
+                next( ApiError.internalServerError( 'An error occurred after deleting the food' ));
+            }
+        })
+        .catch ( err => {
+            console.log( err );
+            next( ApiError.internalServerError( 'An error occurred while deleting the food' ));
+        });
+    }
+    catch ( err ) {
+        next ( ApiError.badRequest( "Error: invalid id" ));
+    }     
+};
+
+/*******************************
+* VALIDATION
+* https://joi.dev/api/?v=17.6.0
+*******************************/
+function validateFood( food ) {
+    // validation
+    const schema = Joi.object({
+        name: Joi.string().required(),
+        category: Joi.string().required(),
+        weight: Joi.number().required(),
+        measure: Joi.string().required(),
+        calories:  Joi.number().required(),
+        energy: Joi.number().required(),
+        foodGroup: Joi.string().required()
+    });
+
+    return schema.validate( food );
+}
+
+module.exports = { getFoods, getFood, createFood, updateFood, deleteFood };
